change width percantage of lastest asides on homepage to fix spacing error

--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ body {
 
 #latest-aside-titles {
 	display: inline-block;
-  width: 75%;
+  width: 70%;
   vertical-align: top;
   font-size: 22px;
   text-align: left;
